--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <div class="flex flex-col items-center space-y-4">            
             <h2 class="text-xl font-bold">Book an Appointment</h2>
             <h1 class="text-xl font-bold">Varintorn Koomphon</h1>
+            <h1 class="text-xl font-bold">โรงเรียนพันธะศึกษา</h1>
             <a href="./search/" class="text-blue-500 hover:underline">Search Your Booking</a>
         </div>
         <form id="booking-form" class="space-y-3">
